--- a/2.html
+++ b/2.html
@@ -12,15 +12,40 @@
 
   gtag('config', 'UA-172014446-1');
 </script>
+<style>
+#active{
+  color:red;
+}
+.saw{
+  color:grey;
+}
+a {
+  color:black;
+  text-decoration: none;
+}
+
+h1 {
+   font-size:50px;
+   text-align:center;
+}
+</style>
 
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
 <ol>
-  <li><a href="1.html">HTML</a></li>
-  <li><a href="2.html">CSS</a></li>
+  <li><a href="1.html" class="saw">HTML</a></li>
+  <li><a href="2.html" class="saw" id="active">CSS</a></li>
   <li><a href="3.html">JavaScript</a></li>
 </ol>
+<!--
+<h1><a href="index.html">WEB</a></h1>
+<ol>
+<li><a href="1.html">HTML</a></li>
+<li><a href="2.html">CSS</a></li>
+<li><a href="3.html">JavaScript</a></li>
+</ol>
+-->
 <h2>CSS</h2>
 <p>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language like HTML.</p>
 </body>
