--- a/2.html
+++ b/2.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>WEB1-CSS</title>
+<title>WEB-CSS</title>
 <meta charset="utf-8">
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172014446-1"></script>
@@ -61,8 +61,8 @@ ol{
   <h1><a href="index.html">WEB</a></h1>
   <div id="grid">
 <ol>
-  <li><a href="1.html" >HTML</a></li>
-  <li><a href="2.html" >CSS</a></li>
+  <li><a href="1.html">HTML</a></li>
+  <li><a href="2.html">CSS</a></li>
   <li><a href="3.html">JavaScript</a></li>
 </ol>
 <div id="article">
