--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>WEB1-welcome</title>
+<title>WEB-welcome</title>
 <meta charset="utf-8">
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172014446-1"></script>
@@ -12,50 +12,63 @@
 
   gtag('config', 'UA-172014446-1');
 </script>
+<style>
+body{
+  margin:0;
+}
+a {
+  color:black;
+  text-decoration: none;
+}
+h1 {
+   font-size:50px;
+   text-align:center;
+   border-bottom:1px solid gray;
+   margin:0;
+   padding:20px;
+}
+ol{
+  border-right:1px solid gray;
+  width:100px;
+  margin:0;
+  padding:20px;
+}
+#grid{
+  display: grid;
+  grid-template-columns : 150px 1fr;
+}
+#grid ol{
+  padding-left:33px;
+}
+#grid #article{
+  padding-left:25px;
+}
+@media(max-width:800px){
+  #grid{
+    display: block;
+  }
+  ol{
+    border-right:none;
+}
+  h1{
+   border-bottom:none;
+ }
+}
 
+</style>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
-<ol>
-  <li><a href="1.html"></a>html</li>
+<div id="grid">
+  <ol>
+  <li><a href="1.html"></a>HTML</li>
   <li><a href="2.html"></a>CSS</li>
   <li><a href="3.html"></a>JavaScript</li>
 </ol>
-<h2>WEB</h2>
+<div id="article">
+  <h2>WEB</h2>
 <p>The World Wide Web (WWW), commonly known as the Web, is an information system where documents and other web resources are identified by Uniform Resource Locators (URLs, such as https://example.com/), which may be interlinked by hypertext, and are accessible over the Internet.[1][2] The resources of the Web are transferred via the Hypertext Transfer Protocol (HTTP) and may be accessed by users by a software application called a web browser and are published by a software application called a web server.</p>
-<p><div id="disqus_thread"></div>
-<script>
-
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-/*
-var disqus_config = function () {
-this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-*/
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = 'https://web01-hn0tq1xr9k.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-                          </p>
-                          <!--Start of Tawk.to Script-->
-                          <script type="text/javascript">
-                          var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-                          (function(){
-                          var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-                          s1.async=true;
-                          s1.src='https://embed.tawk.to/5f052e53760b2b560e6ff063/default';
-                          s1.charset='UTF-8';
-                          s1.setAttribute('crossorigin','*');
-                          s0.parentNode.insertBefore(s1,s0);
-                          })();
-                          </script>
-                          <!--End of Tawk.to Script-->
+</div>
+</div>
 </body>
 </html>
