--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <title>WEB-welcome</title>
 <meta charset="utf-8">
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-172014446-1"></script>
+<!-- Global site tag (gtag.js) - Google Analytics
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-172014446-1"></script>-->
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -12,58 +12,15 @@
 
   gtag('config', 'UA-172014446-1');
 </script>
-<style>
-body{
-  margin:0;
-}
-a {
-  color:black;
-  text-decoration: none;
-}
-h1 {
-   font-size:50px;
-   text-align:center;
-   border-bottom:1px solid gray;
-   margin:0;
-   padding:20px;
-}
-ol{
-  border-right:1px solid gray;
-  width:100px;
-  margin:0;
-  padding:20px;
-}
-#grid{
-  display: grid;
-  grid-template-columns : 150px 1fr;
-}
-#grid ol{
-  padding-left:33px;
-}
-#grid #article{
-  padding-left:25px;
-}
-@media(max-width:800px){
-  #grid{
-    display: block;
-  }
-  ol{
-    border-right:none;
-}
-  h1{
-   border-bottom:none;
- }
-}
-
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
 <div id="grid">
   <ol>
-  <li><a href="1.html"></a>HTML</li>
-  <li><a href="2.html"></a>CSS</li>
-  <li><a href="3.html"></a>JavaScript</li>
+    <li><a href="1.html">HTML</a></li>
+    <li><a href="2.html">CSS</a></li>
+    <li><a href="3.html">JavaScript</a></li>
 </ol>
 <div id="article">
   <h2>WEB</h2>
