--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <div id="article">
   <h2>WEB</h2>
 <p>The World Wide Web (WWW), commonly known as the Web, is an information system where documents and other web resources are identified by Uniform Resource Locators (URLs, such as https://example.com/), which may be interlinked by hypertext, and are accessible over the Internet.[1][2] The resources of the Web are transferred via the Hypertext Transfer Protocol (HTTP) and may be accessed by users by a software application called a web browser and are published by a software application called a web server.</p>
+<img src="coding.jpg" width=95%>
 </div>
 </div>
 </body>
